Enable deletion of resolved reference tags (#741)
* Added delete functionality for resolved tags when conflict resolution is enabled

* Refactor js

* Update conflict resolution view

* Add transparency to tag linethrough

* rename classes

* rewrite; remove working tags

* extra space

--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -345,9 +345,6 @@ div.smart-tag.active {
     text-align: left;
     white-space: pre-wrap;
 }
-.refTagEditing {
-    cursor: pointer;
-}
 .abstract_label {
     font-weight: bold;
 }
@@ -476,10 +473,11 @@ div.smart-tag.active {
     display: inline-block;
 }
 
-.refUserTagDiff {
-    color: #ffffff;
-    background-color: maroon;
-    border: 0.15rem dotted #ffffff;
+.refUserTagRemove {
+    color: rgb(128,0,0);
+    background-color: #ffffff;
+    border: 0.15rem dotted rgb(128,0,0);
+    text-decoration: line-through rgba(128,0,0,0.5);
 }
 
 .refTagSame {
